api: 요청 목록 조회 수정